# ntro

./: Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: Release.yml  Test.yml
npm/: getBinary.js
src/: .env.test  .env.test2  env.rs  lib.rs  main.rs  prettify.rs  test.multiple.yaml  test.yaml  watch.rs  yaml.rs
src/command/: mod.rs  pm.rs  prettier.rs
src/dotenv/: .env.dupes.test  .env.test  .env.test2  mod.rs  module.ts  parse.rs  typehint_parser.rs  zod.rs
src/dotenv/snapshots/: ntro__dotenv__parse__tests__parsing_variables_with_type_hints-2.snap  ntro__dotenv__parse__tests__parsing_variables_with_type_hints.snap  ntro__dotenv__tests__introspect_typescript_types_gen.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints-2.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints-3.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints-4.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints-5.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints-6.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints-7.snap  ntro__dotenv__typehint_parser__tests__lexing_type_hints.snap  ntro__dotenv__typehint_parser__tests__parse_type_hints-2.snap  ntro__dotenv__typehint_parser__tests__parse_type_hints-3.snap  ntro__dotenv__typehint_parser__tests__parse_type_hints-4.snap  ntro__dotenv__typehint_parser__tests__parse_type_hints-5.snap  ntro__dotenv__typehint_parser__tests__parse_type_hints-6.snap  ntro__dotenv__typehint_parser__tests__parse_type_hints.snap  ntro__dotenv__zod__tests__gen-2.snap  ntro__dotenv__zod__tests__gen-3.snap  ntro__dotenv__zod__tests__gen-4.snap  ntro__dotenv__zod__tests__gen.snap  ntro__dotenv__zod__tests__gen_err-4.snap  ntro__dotenv__zod__tests__zod_schema_gen.snap  ntro__dotenv__zod__tests__zod_schema_gen_with_type_conflicts.snap  ntro__env__typehint_parser__tests__lexing_type_hints-4.snap  ntro__env__typehint_parser__tests__lexing_type_hints.snap  ntro__env__typehint_parser__tests__parse_type_hints.snap  (+4 more)
src/env/: mod.rs  parse.rs  typehint_parser.rs  zod.rs
src/snapshots/: ntro__env__tests__introspect_typescript_types_gen.snap  ntro__tests__introspect_typescript_types_gen-2.snap  ntro__tests__introspect_typescript_types_gen.snap  ntro__yaml__tests__introspect_typescript_types_gen-2.snap  ntro__yaml__tests__introspect_typescript_types_gen.snap
(+5 files in other folders)
